--- a/BTCPayServer.Plugins.EthereumPayments.csproj
+++ b/BTCPayServer.Plugins.EthereumPayments.csproj
@@ -1,27 +1,36 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
-    <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
-        <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
-    </PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net8.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
+    <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
 
-    <ItemGroup>
-        <ProjectReference Include="..\btcpayserver\BTCPayServer\BTCPayServer.csproj" />
-        <ProjectReference Include="..\btcpayserver\BTCPayServer.Abstractions\BTCPayServer.Abstractions.csproj" />
-        <ProjectReference Include="..\btcpayserver\BTCPayServer.Data\BTCPayServer.Data.csproj" />
-    </ItemGroup>
+    <!-- Plugin-Metadaten (optional, aber nice) -->
+    <Product>Ethereum Payments</Product>
+    <Description>Accept ETH and ERC-20 tokens (USDT, dEURO) on Ethereum Mainnet.</Description>
+    <Version>1.0.0</Version>
+  </PropertyGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Nethereum.Web3" Version="4.19.0" />
-        <PackageReference Include="Nethereum.Contracts" Version="4.19.0" />
-        <PackageReference Include="Nethereum.RPC" Version="4.19.0" />
-        <PackageReference Include="Nethereum.Util" Version="4.19.0" />
-        <PackageReference Include="Nethereum.Hex" Version="4.19.0" />
-    </ItemGroup>
+  <!-- WICHTIG: KEINE ProjectReference mehr auf ../btcpayserver/... -->
+  <ItemGroup>
+    <!-- BTCPay Kern-APIs als NuGet (Version ungefähr an deine BTCPay-Server-Version anpassen) -->
+    <PackageReference Include="BTCPayServer.Abstractions" Version="1.13.*" />
+    <PackageReference Include="BTCPayServer.Client" Version="1.13.*" />
+    <PackageReference Include="BTCPayServer" Version="1.13.*" />
+  </ItemGroup>
 
-    <ItemGroup>
-        <EmbeddedResource Include="Views\**\*.cshtml" />
-    </ItemGroup>
+  <!-- Ethereum / Nethereum Dependencies -->
+  <ItemGroup>
+    <PackageReference Include="Nethereum.Web3" Version="4.19.0" />
+    <PackageReference Include="Nethereum.Contracts" Version="4.19.0" />
+    <PackageReference Include="Nethereum.RPC" Version="4.19.0" />
+    <PackageReference Include="Nethereum.Util" Version="4.19.0" />
+    <PackageReference Include="Nethereum.Hex" Version="4.19.0" />
+  </ItemGroup>
+
+  <!-- Razor Views einbetten -->
+  <ItemGroup>
+    <EmbeddedResource Include="Views\**\*.cshtml" />
+  </ItemGroup>
 </Project>
