--- a/BTCPayServer.Plugins.EthereumPayments.csproj
+++ b/BTCPayServer.Plugins.EthereumPayments.csproj
@@ -1,41 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
-    <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+        <AddRazorSupportForMvc>true</AddRazorSupportForMvc>
+        <GenerateEmbeddedFilesManifest>true</GenerateEmbeddedFilesManifest>
+    </PropertyGroup>
 
-  <!-- Plugin-Metadaten (optional) -->
-  <PropertyGroup>
-    <Product>Ethereum Payments</Product>
-    <Description>Accept ETH and ERC-20 tokens (USDT, dEURO) on Ethereum Mainnet.</Description>
-    <Version>1.0.0</Version>
-  </PropertyGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\btcpayserver\BTCPayServer\BTCPayServer.csproj" />
+        <ProjectReference Include="..\btcpayserver\BTCPayServer.Abstractions\BTCPayServer.Abstractions.csproj" />
+        <ProjectReference Include="..\btcpayserver\BTCPayServer.Data\BTCPayServer.Data.csproj" />
+    </ItemGroup>
 
-  <!-- Wie im offiziellen btcpayserver-plugin-template -->
-  <ItemDefinitionGroup>
-    <ProjectReference>
-      <Properties>StaticWebAssetsEnabled=false</Properties>
-      <Private>false</Private>
-      <ExcludeAssets>runtime;native;build;buildTransitive;contentFiles</ExcludeAssets>
-    </ProjectReference>
-  </ItemDefinitionGroup>
+    <ItemGroup>
+        <PackageReference Include="Nethereum.Web3" Version="4.19.0" />
+        <PackageReference Include="Nethereum.Contracts" Version="4.19.0" />
+        <PackageReference Include="Nethereum.RPC" Version="4.19.0" />
+        <PackageReference Include="Nethereum.Util" Version="4.19.0" />
+        <PackageReference Include="Nethereum.Hex" Version="4.19.0" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <!-- Referenz auf das Submodul 'btcpayserver' -->
-    <ProjectReference Include="btcpayserver/BTCPayServer/BTCPayServer.csproj" />
-    <!-- Razor-Views des Plugins einbetten -->
-    <EmbeddedResource Include="Views\**\*.cshtml" />
-  </ItemGroup>
-
-  <!-- Nethereum Dependencies -->
-  <ItemGroup>
-    <PackageReference Include="Nethereum.Web3" Version="4.19.0" />
-    <PackageReference Include="Nethereum.Contracts" Version="4.19.0" />
-    <PackageReference Include="Nethereum.RPC" Version="4.19.0" />
-    <PackageReference Include="Nethereum.Util" Version="4.19.0" />
-    <PackageReference Include="Nethereum.Hex" Version="4.19.0" />
-  </ItemGroup>
+    <ItemGroup>
+        <EmbeddedResource Include="Views\**\*.cshtml" />
+    </ItemGroup>
 </Project>
